--- a/powergrid/static/css/app.css
+++ b/powergrid/static/css/app.css
@@ -5,13 +5,108 @@ li:before {
     display: inline-block;
 }
 
-li.player-RED:before { background: #c00; }
-li.player-GREEN:before { background: #0c0; }
-li.player-BLUE:before { background: #00c; }
-li.player-YELLOW:before { background: yellow; }
-li.player-BLACK:before { background: black; }
-li.player-PURPLE:before { background: purple; }
+li.player-red:before { background: #c00; }
+li.player-green:before { background: #0c0; }
+li.player-blue:before { background: #00c; }
+li.player-yellow:before { background: yellow; }
+li.player-black:before { background: black; }
+li.player-purple:before { background: purple; }
 
-#playerlist {
-    list-style-type: none;
+li.city-green {
+    background: #dff0d8;
+}
+
+li.city-red {
+    background: #f2dede;
+}
+
+li.city-purple {
+    background: #EBD6FF;
+}
+
+li.city-brown {
+    background: #D6C1AD;
+}
+
+li.city-cyan {
+    background: #d9edf7;
+}
+
+li.city-yellow {
+    background: #fcf8e3;
+}
+
+div.house-blank {
+    height: 20px;
+    width: 20px;
+    outline: black solid thin;
+    margin: 4px;
+    display:inline-block;
+    background: white;
+    text-align: center;
+}
+
+div.house-blank-purchaseable {
+    height: 20px;
+    width: 20px;
+    outline: gold solid thin;
+    margin: 4px;
+    display:inline-block;
+    background: white;
+    text-align: center;
+}
+
+div.interactable {
+    cursor: pointer;
+    cursor: hand;
+}
+
+div.house-red {
+    height: 20px;
+    width: 20px;
+    outline: black solid thin;
+    margin: 4px;
+    display: inline-block;
+    background: #c00;
+    text-align: center;
+}
+
+div.house-green {
+    height: 20px;
+    width: 20px;
+    margin: 4px;
+    background: #0c0;
+    display: inline-block;
+}
+
+div.house-blue {
+    height: 20px;
+    width: 20px;
+    margin: 4px;
+    background: #00c;
+    display: inline-block;
+}
+
+div.house-yellow {
+    height: 20px;
+    width: 20px;
+    margin: 4px;
+    background: yellow;
+    display: inline-block;
+}
+
+div.house-black {
+    height: 20px;
+    width: 20px;
+    margin: 4px;
+    background: black;
+    display: inline-block;
+}
+
+div.house-purple {
+    height: 20px;
+    width: 20px;
+    margin: 4px;
+    background: purple;
+    display: inline-block;
 }
