China map implemented
China.json added
- nodes populated
- links added for all regions and cities

Chinese map support in server
- Call with “america” for America map, “china” for China map.
- Fails over to default America map if problem encountered

app.css updated for china region color pink
- pink region color now implemented
- purple region color darkened to distinguish from pink

Updated README.md
- instructions for map arguments

--- a/powergrid/static/css/app.css
+++ b/powergrid/static/css/app.css
@@ -12,6 +12,10 @@ li.player-yellow:before { background: yellow; }
 li.player-black:before { background: black; }
 li.player-purple:before { background: purple; }
 
+li.city-pink {
+    background: #ffd1dc;
+}
+
 li.city-green {
     background: #dff0d8;
 }
@@ -21,7 +25,7 @@ li.city-red {
 }
 
 li.city-purple {
-    background: #EBD6FF;
+    background: #b19cd9;
 }
 
 li.city-brown {
